[gd_scene load_steps=14 format=2]

[ext_resource path="res://lighter_button.png" type="Texture" id=1]
[ext_resource path="res://lighter_body.png" type="Texture" id=2]
[ext_resource path="res://fire.png" type="Texture" id=3]
[ext_resource path="res://fire2.png" type="Texture" id=4]
[ext_resource path="res://fire3.png" type="Texture" id=5]
[ext_resource path="res://lighter.gd" type="Script" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://lighter_on.wav" type="AudioStream" id=8]
[ext_resource path="res://lighter_off.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 125, 266 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "anim_fire",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 61, 143 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.528, 10 )

[node name="lighter" type="KinematicBody2D"]
z_index = 5
input_pickable = true
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.5, 15 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 4 )

[node name="base" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="LighterBody" type="Sprite" parent="base"]
texture = ExtResource( 2 )

[node name="LighterButton" type="Sprite" parent="base"]
z_index = -1
texture = ExtResource( 1 )

[node name="fire" type="Node2D" parent="base"]
position = Vector2( -60, -216 )

[node name="fire_anim" type="AnimatedSprite" parent="base/fire"]
visible = false
position = Vector2( 58, 190 )
z_index = -1
frames = SubResource( 3 )
animation = "anim_fire"
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="base/fire/fire_anim"]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="base/fire/fire_anim/Area2D"]
position = Vector2( -68, -336 )
shape = SubResource( 6 )

[node name="Icon" type="Sprite" parent="base/fire"]
visible = false
scale = Vector2( 1, 10.364 )
texture = ExtResource( 7 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -93, -76 )
z_index = 4
shape = SubResource( 5 )

[node name="on" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="off" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="input_event" from="." to="." method="_on_lighter_input_event"]
[connection signal="body_entered" from="base/fire/fire_anim/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
